--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person(given = "Enrico", family = "Schumann",
                   role  = c("aut", "cre"),
                   email = "es@enricoschumann.net")
+Depends: R (>= 3.2)
 Description: A wrapper for Perl6::Form.
 License: GPL-3
 URL: http://enricoschumann.net/R/packages/Perl6.Form.html,
